Kubernetes-manifests/ai-service-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
      annotations: 
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: ai-service
      containers:
      - name: ai-service-container
        image: vishallokam/ecommerce-description-generation-service:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 20m
            memory: 46Mi
          limits:
            cpu: 30m
            memory: 65Mi

---

apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: default
  labels:
    app: ai-service
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: ai-service-externalname
  namespace: default
spec:
  type: ExternalName
  externalName: api.openai.com
