Kubernetes-manifests/auth-service-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
      annotations: 
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: auth-service
      containers:
      - name: auth-service-container
        image: vishallokam/ecommerce-auth-service:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 20m
            memory: 46Mi
          limits:
            cpu: 30m
            memory: 65Mi

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth-service
spec:
  type: LoadBalancer
  selector:
    app: auth-service
  ports:
  - name: http
    protocol: TCP
    port: 7070
    targetPort: 7070
