Kubernetes-manifests/order-service-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: default
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations: 
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: order-service
      containers:
      - name: order-service-container
        image: vishallokam/ecommerce-order-service:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 20m
            memory: 46Mi
          limits:
            cpu: 30m
            memory: 65Mi

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
