Kubernetes-manifests/product-service-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: default
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
      # annotations: 
      #   consul.hashicorp.com/connect-inject: "true"
    spec:
      # serviceAccountName: product-service
      containers:
      - name: product-service-container
        image: vishallokam/ecommerce-product-service:2.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 20m
            memory: 46Mi
          limits:
            cpu: 30m
            memory: 65Mi

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---

# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: product-service
#   namespace: default
# automountServiceAccountToken: true

# ---

# apiVersion: consul.hashicorp.com/v1alpha1
# kind: ServiceDefaults
# metadata:
#   name: product-service
#   namespace: default
# spec:
#   protocol: "http"
