Kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    name: auth-service
spec:
  rules:
  - http:
      paths:
      - path: "/auth"
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port: 
              number: 7070
      - path: "/generate"
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port: 
              number: 5000
      - path: "/products"
        pathType: Prefix
        backend:
          service:
            name: product-service
            port: 
              number: 8080
      - path: "/product"
        pathType: Prefix
        backend:
          service:
            name: product-service
            port: 
              number: 8080
      - path: "/order"
        pathType: Prefix
        backend:
          service:
            name: order-service
            port: 
              number: 9090
      - path: "/orders"
        pathType: Prefix
        backend:
          service:
            name: order-service
            port: 
              number: 9090
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: admin-front-service
            port: 
              number: 80
